scrollを促す矢印を付けた

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {
 
 footer {
   padding: 3px 0;
-  background-color: rgb(217, 225, 233);
   text-align: center;
 }
 
@@ -120,13 +119,17 @@ footer {
   object-fit: cover;
 }
 
+.film-wrap {
+  width: 100%;
+  background-color: #111;
+  overflow-x: scroll;
+}
+
 .film {
   height: 400px;
-  background-color: #111;
   position: relative;
   display: flex;
   align-items: center;
-  overflow-x: scroll;
 }
 
 .film::before,
@@ -174,6 +177,48 @@ footer {
 
 .film::after {
   top: 4px;
+}
+
+.arrow-wrap {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.arrow {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: #333;
+  margin: 10px 0;
+  opacity: 0;
+  transition: all 0.5s;
+  transform: translateX(-10px);
+}
+
+.right-arrow {
+  transform: translateX(10px);
+}
+
+.arrow::before {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 2px;
+  background-color: #333;
+  margin: 5px 0;
+  transform: translate(-2px, 0px) rotate(45deg);
+}
+
+.right-arrow::before {
+  transform: translate(17px, 0px) rotate(-45deg);
+}
+
+.onDisplay {
+  opacity: 1;
+  transition: all 0.5s;
+  transform: translateX(0px);
 }
 
 /* Dates */
