--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 .about,
 .access,
+.main-visuals,
 .dates {
   width: 90%;
   margin: 90px 5%;
@@ -219,6 +220,108 @@ footer {
   opacity: 1;
   transition: all 0.5s;
   transform: translateX(0px);
+}
+
+/* MainVisuals */
+.main-visuals {
+}
+
+summary {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+
+details summary::after {
+  content: "OPEN";
+}
+
+details[open] summary::after {
+  content: "CLOSE";
+}
+
+details[open] .details-contents {
+  animation: fadeIn 0.6s ease;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; /* 透明 */
+    transform: translateY(-10px); /* 上から表示 */
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.fram-wrap {
+  width: 100%;
+}
+
+.frame {
+  border: #333 8px solid;
+  box-shadow: 4px 4px 5px 2px rgba(122, 122, 122, 0.91) inset;
+  position: relative;
+  background-color: #fffdf8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  width: calc(100% - 96px);
+  height: auto;
+  position: relative;
+}
+
+.main-visual-image {
+  width: 100%;
+  border: 6px solid;
+  border-color: #cdcdcd #e6e6e6 #f0f0f0 #c0c0c0;
+  color: transparent;
+}
+
+.shadow {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  display: block;
+  filter: blur(2px);
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+.shadow::before {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  display: block;
+  filter: blur(2px);
+  top: 0px;
+  right: -20px;
+  border-left: 20px solid #868686;
+  border-top: 10px solid transparent;
+  height: 100%;
+}
+
+.shadow::after {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  display: block;
+  filter: blur(2px);
+  bottom: -18px;
+  right: -20px;
+  border-top: 18px solid #868686;
+  border-left: 10px solid transparent;
+  width: calc(100% + 14px);
+}
+
+.name {
+  font-size: 16px;
+  text-align: end;
+  margin: 8px 0 20px;
 }
 
 /* Dates */
